# clap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  Makefile  NOTICE  README.md  bootstrap.py  build.sh  build_config  character.c  character.h  clap.c  clap.h  clap.supp  common.h  config.sh  configure.sh  default.make  display-glfw.c  display-www.c  display.h  font.c  font.h  gltf.c  gltf.h  input-fuzzer.c  input-joystick.c  input-joystick.h  input-www.c  input.c  input.h  json.h  librarian.c  librarian.h  logger.c  logger.h  matrix.h  (+30 more)
.github/workflows/: linux-build.yml  macos-build.yml  simple-build.yml  windows-build.yml  www-build.yml
compat/: CMakeLists.txt  compat.h  compat_config.h.in
compat/cmake/: clap_compatConfig.cmake.in
compat/shared/: io.h  path.h  strings.h
compat/windows/: compat.h  init.c  io.h  path.h  string.c  time.c
compile-time/: CMakeLists.txt  ca3d.c  preprocess_shaders.c
core/: CMakeLists.txt  Makefile  anictl.h  api.h  audio-settings.c  audio-settings.h  base64.c  base64.h  build.sh  ca-common.h  ca2d.c  ca2d.h  ca3d.c  ca3d.h  camera.c  camera.h  character.c  character.h  clap.c  clap.h  common.h  compiler.h  config.h.in  cpio.c  cpio.h  datatypes.c  datatypes.h  debug_draw.c  debug_draw.h  display-glfw-metal.m  display-glfw.c  display-www.c  display.h  draw.c  draw.h  error.c  error.h  errors.h  font.c  font.h  (+135 more)
demo/d2jam2/: CMakeLists.txt  main.c  mesh-noise.c  onehandclap.h  shell_clap.html  ui.c
demo/ldjam52/: CMakeLists.txt  onehandclap.c
demo/ldjam56/: CMakeLists.txt  onehandclap.c  shell_clap.html  ui.c
demo/ldjam57/: CMakeLists.txt  main.c  shell_clap.html
demo/ldjam59/: CMakeLists.txt  main.c
docs/: build-errors.md  vscode-setup.md
scripts/: bootstrap.cmake  builddate-gen.cmake  builtin-assets.cmake  builtin-shaders.cmake  cerr-gen.cmake  cimgui.cmake  clap-doc-md-gen.cmake  clap-doc.cmake  compile-shaders.cmake  executable-macos.cmake  executable.cmake  git-version.cmake  host-compiler.cmake  pack-assets.cmake  preprocess_shaders.sh  refclass-gen.cmake  render-bindings-gen.cmake  renderer-switch.cmake  rust-wasm.cmake  static-linkage.cmake  ucpio.sh  win32-helpers.cmake
shaders/: color-utils.glsl  color_passthrough.glsl  color_pt.glsl  combine.frag  combine.vert  contrast.frag  contrast.vert  debug.frag  debug.vert  downsample.frag  edge_filter.glsl  glyph.frag  glyph.vert  half.glsl  hblur.frag  hblur.vert  laplace.frag  lighting.glsl  linearize-depth.glsl  lut.glsl  model.frag  model.vert  ndc-z.glsl  noise.glsl  oetf.glsl  particle.frag  particle.vert  pass-tex.glsl  shadow.frag  shadow.geom  shadow.glsl  shadow.vert  shadow_vsm.frag  shadow_vsm.geom  shadow_vsm.vert  smaa-blend-weights.frag  smaa-blend-weights.vert  smaa-neighborhood-blend.frag  smaa-neighborhood-blend.glsl  sobel-msaa.frag  (+31 more)
tools/clap-doc-plugin/: CMakeLists.txt  clap-doc-plugin.cpp  clap-doc.hpp  clap-plugin-backends.hpp  clap-plugin.hpp  clap.hpp
tools/httpd/: httpd.py
tools/server/: CMakeLists.txt  server.c
tools/ucpio/: CMakeLists.txt  ucpio.c
